# SMA-Project

./: CMakeLists.txt  CMakeSettings.json
SMA/: CMakeLists.txt  main.cpp
SMA/src/: main.cpp
SMA/src/core/: app.cpp  app.h  client.cpp  client.h  clientinfo.h  filelogger.cpp  filelogger.h  logger.cpp  logger.h  profile.cpp  profile.h  server.cpp  server.h  streamlogger.cpp  streamlogger.h  uuid_v4.h
SMA/src/crypt/: crypt.h
SMA/src/gui/: gui.cpp  gui.h
SMA/src/gui/ImGuiInternal/: imgui.ini
SMA/src/network/: checksum.cpp  checksum.h  crc32.h  netclient.h  protocol.cpp  protocol.h  tcptransport.cpp  tcptransport.h  transportprotocol.h  udptransport.cpp  udptransport.h
SMA/src/update/: serverlist.cpp  serverlist.h
